--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2",
-    "express-http-proxy": "^2.0.0"
+    "express": "^4.19.2"
   }
 }
